--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  list-style-type: none;
 }
 body {
   width: 100%;
@@ -88,7 +89,10 @@ nav {
   transition: 1s;
 }
 /***** CONTROLS *****/
-
+.controls li {
+  height: 30px;
+  padding: 20px;
+}
 .feature img {
   width: 70px;
 }
