--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,7 @@ nav {
   display: flex;
   align-items: center;
 }
-.logo {
-  flex-basis: 20%;
-}
-.logo img {
-  width: 150px;
-}
+
 .nav-links {
   flex: 1;
   text-align: right;
@@ -49,8 +44,42 @@ nav {
   color: #fff;
   text-decoration: none;
 }
-/***** "CORE" *****/
+/***** CONTROLS *****/
 
+.controls {
+  position: absolute;
+  width: 12%;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+.controls li {
+  height: 30px;
+  padding: 20px;
+}
+
+.controls h4 {
+  margin: 15px 0;
+}
+#upBtn {
+  width: 25px;
+  cursor: pointer;
+}
+#downBtn {
+  width: 25px;
+  cursor: pointer;
+  transform: rotate(180deg);
+}
+
+/***** "CORE" *****/
+.information {
+  width: 1000px;
+  height: 1000px;
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+}
 .overlay {
   width: 0;
   height: 0;
@@ -60,14 +89,7 @@ nav {
   border-left: 500px solid rgb(255, 255, 255);
   position: relative;
 }
-.information {
-  width: 1000px;
-  height: 1000px;
-  position: absolute;
-  top: 50%;
-  left: -10%;
-  transform: translateY(-50%);
-}
+
 /****** Mobile- linterna *****/
 .mobile {
   width: 200px;
@@ -77,7 +99,7 @@ nav {
   right: 200px;
   z-index: 1;
 }
-
+/***** otros core *****/
 #circle {
   width: 1000px;
   height: 1000px;
@@ -87,11 +109,6 @@ nav {
   border-radius: 50%;
   transform: rotate(0deg);
   transition: 1s;
-}
-/***** CONTROLS *****/
-.controls li {
-  height: 30px;
-  padding: 20px;
 }
 .feature img {
   width: 70px;
@@ -106,25 +123,6 @@ nav {
 }
 .feature div p {
   margin-top: 8px;
-}
-.controls {
-  position: absolute;
-  right: 10%;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-.controls h3 {
-  margin: 15px 0;
-}
-#upBtn {
-  width: 15px;
-  cursor: pointer;
-}
-#downBtn {
-  width: 15px;
-  cursor: pointer;
-  transform: rotate(180deg);
 }
 
 /* alienamientos en circulo*/
