--- a/styles.css
+++ b/styles.css
@@ -156,15 +156,15 @@ section#text_principal {
   position: relative;
   color: white;
   font-size: 20px;
-
+  text-align: center;
   margin-left: 300px;
 }
 section#text_principal p:not(:first-of-type) {
-  padding-top: 130px;
+  padding-top: 70px;
 }
 
-/***** Space effect*****/
-span {
+/***** Space- plane effect*****/
+/* span {
   animation: span 3s ease-in infinite alternate;
 }
 .letter {
@@ -198,3 +198,55 @@ span {
     width: 30vw;
   }
 }
+/***** Word swipe animation *****/
+div#1 {
+  overflow: hidden;
+  position: relative;
+  float: right;
+  height: 65px;
+  padding-top: 10px;
+  margin-top: -10px;
+  li {
+      font-family: Serif;
+      color: #eee;
+      font-weight: 700;
+      padding: 0 10px;
+      height: 45px;
+      margin-bottom: 45px;
+      display: block;
+  }
+}
+}
+
+.flip2 { animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip3 { animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+
+
+
+@keyframes flip4 {
+0% { margin-top: -360px; }
+5% { margin-top: -270px; }
+25% { margin-top: -270px; }
+30% { margin-top: -180px; }
+50% { margin-top: -180px; }
+55% { margin-top: -90px; }
+75% { margin-top: -90px; }
+80% { margin-top: 0px; }
+99.99% { margin-top: 0px; }
+100% { margin-top: -270px; }
+}
+
+// Layout //////////////////////////////////////////
+
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Oswald);
+body,
+html {
+width: 100%;
+height: 100vh;
+margin: 0;
+padding: 0;
+overflow: hidden;
+} */
+
+
