--- a/styles.css
+++ b/styles.css
@@ -109,19 +109,13 @@ nav {
   transform: rotate(0deg);
   transition: 1s;
 }
-.feature img {
-  width: 70px;
-}
 .feature {
-  position: absolute;
   display: flex;
+  position: absolute;
   color: #fff;
 }
-.feature div {
+.feature h2 {
   margin-left: 30px;
-}
-.feature div p {
-  margin-top: 8px;
 }
 
 /* alienments in circle*/
@@ -146,8 +140,29 @@ nav {
   right: 350px;
   transform: rotate(-270deg);
 }
+/***** IMG Icon *****/
 
-/***** section text_principal About me ****/
+/* #imgAbout {
+  filter: invert(96%) sepia(0%) saturate(0%) hue-rotate(111deg) brightness(104%)
+    contrast(105%);
+  width: 150px;
+  position: relative;
+  top: -100px;
+  right: -40px;
+} */
+.imgIcon {
+  filter: invert(96%) sepia(0%) saturate(0%) hue-rotate(111deg) brightness(104%)
+    contrast(105%);
+  width: 150px;
+  position: relative;
+  top: -100px;
+  right: -40px;
+}
+.imgIcon.imgAbout {
+  transform: scaleX(-1);
+}
+
+/***** section textPrincipal****/
 section#textPrincipal {
   width: 60%;
   height: 1000px;
