--- a/styles.css
+++ b/styles.css
@@ -82,38 +82,42 @@ nav ul li ul li img {
 }
 
 /***** triangle effect *****/
-.hidder_container {
+/* .hidder_container {
   width: 1000px;
   height: 1000px;
   position: absolute;
   top: 48%;
   left: 8%;
   transform: translateY(-50%);
-}
-.hidder {
-  width: 0;
-  height: 0;
-  border-top: 500px solid transparent;
-  border-right: 500px solid transparent;
-  border-bottom: 500px solid transparent;
-  border-left: 500px solid black;
+  background-color: red;
+} */
+.cube-triangle {
+  /* width: 100px; */
+  height: 100px;
+  border: 150px solid transparent;
+  border-left: 150px solid black;
   position: relative;
+  margin-left: -5%;
+  top: calc(50% - 100px);
 }
 
 /***** Circle in triangle*****/
 #circle {
-  width: 1000px;
-  height: 1000px;
   position: absolute;
-  top: -500px;
-  left: -1100px;
-  border-radius: 20%;
+  top: 5%;
+  /* left: 55%; */
+  /* border-radius: 1%; */
   transform: rotate(0deg);
   transition: 1s;
+  margin-left: -5%;
+  border: 1px solid red;
+}
+.translate {
+  font-size: 10px;
 }
 .feature {
-  display: flex;
-  position: absolute;
+  /* display: flex;
+  position: absolute; */
   color: #fff;
 }
 .feature h2 {
@@ -121,10 +125,13 @@ nav ul li ul li img {
 }
 
 /* alienments in circle*/
-.one {
-  top: 450px;
-  right: 50px;
+/*.one {
+  display: flex;
+  position: absolute;
+  top: 0px;
+  right: 0px;
 }
+
 .two {
   top: 150px;
   left: 350px;
@@ -141,24 +148,16 @@ nav ul li ul li img {
   bottom: 150px;
   right: 350px;
   transform: rotate(-270deg);
-}
+} */
 /***** IMG Icon *****/
 
-/* #imgAbout {
-  filter: invert(96%) sepia(0%) saturate(0%) hue-rotate(111deg) brightness(104%)
-    contrast(105%);
-  width: 150px;
-  position: relative;
-  top: -100px;
-  right: -40px;
-} */
 .imgIcon {
   filter: invert(96%) sepia(0%) saturate(0%) hue-rotate(111deg) brightness(104%)
     contrast(105%);
-  width: 150px;
-  position: relative;
+  width: 70px;
+  /*position: relative;
   top: -100px;
-  right: -40px;
+  right: -40px; */
 }
 .imgIcon.imgAbout {
   transform: scaleX(-1);
