--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   );
 }
 /***** Cols from Bootstrap *****/
-.col-md-2 {
+.col-md-2:first-of-type {
   background-color: black;
   z-index: 1;
 }
