--- a/styles.css
+++ b/styles.css
@@ -165,13 +165,14 @@ h2.translate {
 }
 /***** section textPrincipal****/
 section#textPrincipal {
-  width: 60%;
-  height: 1000px;
-  transform: translate(35%, 20%);
-  position: relative;
+  width: 100%;
+  height: 30%;
+
+  /* transform: translate(35%, 20%);
+  position: relative; */
   color: white;
   font-size: 20px;
-  margin-left: 300px;
+  /* margin-left: 300px; */
 }
 /***** About me *****/
 article#base {
@@ -184,6 +185,11 @@ article#base p:not(:first-of-type) {
 /***** Projects *****/
 article#projectsInfo {
   text-align: center;
+  height: 100%;
+}
+article#projectsInfo img {
+  margin-top: 10%;
+  height: 100%;
 }
 
 /***** Education *****/
