--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ h2.translate {
 /***** section textPrincipal****/
 section#textPrincipal {
   width: 100%;
-  height: 30%;
+  /* height: 30%; */
 
   /* transform: translate(35%, 20%);
   position: relative; */
@@ -185,11 +185,10 @@ article#base p:not(:first-of-type) {
 /***** Projects *****/
 article#projectsInfo {
   text-align: center;
-  height: 100%;
 }
+
 article#projectsInfo img {
-  margin-top: 10%;
-  height: 100%;
+  width: 70%;
 }
 
 /***** Education *****/
