--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,10 @@ body {
   position: relative;
   overflow: hidden;
   background: linear-gradient(
-    to right,
-    #fdf497 0%,
-    #fdf497 5%,
-    #fd5949 45%,
-    #d6249f 60%,
-    #285aeb 90%
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(32, 105, 101, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
   );
 }
 /***** Cols from Bootstrap *****/
