--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,16 @@ body {
 
 /***** Navbar *****/
 
-nav {
+nav{
   width: 100%;
   margin: 20px -20px;
   display: flex;
   align-items: center;
   color: #fff;
   text-align: right;
+}
+nav a {
+  color:#fff
 }
 
 nav ul {
