--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,19 @@ article#skillsInfo ul li:first-of-type {
   background-position: center;
 
 }
+.test{
+  background-color: black;
+  height: 150px;
+  width: 90%;
+
+  
+}
+.imgDetective{
+  opacity: 1;
+  width:35%;
+  margin-top: -25%;
+  /* margin-left: -30%; */
+  /* background-color: rebeccapurple; */
+  clip-path:inset(30% 30% 45% 50%);
+}
+
