cv section - linkedin ready (v1)

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,15 @@ article#skillsInfo ul li:first-of-type {
   opacity: 1;
   width:35%;
   margin-top: -25%;
+  margin-left: 5%;
   clip-path:inset(30% 30% 45% 50%);
+  
 }
+.linkedin:hover{
+  background-color: black;
+}
+
+
+  
+
 
