--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 /***** Navbar *****/
 
-nav{
+nav {
   width: 100%;
   margin: 20px -20px;
   display: flex;
@@ -31,7 +31,7 @@ nav{
   text-align: right;
 }
 nav a {
-  color:#fff
+  color: #fff;
 }
 
 nav ul {
@@ -169,13 +169,11 @@ section#textPrincipal {
   width: 100%;
   color: white;
   font-size: 20px;
-  
 }
 /***** About me *****/
 
 article#base {
   margin-top: 20%;
-  
 }
 article#base p:not(:first-of-type) {
   padding-top: 5%;
@@ -224,29 +222,27 @@ article#skillsInfo ul li:first-of-type {
 }
 /***** CV *****/
 
-
 .triangle-right {
-  width: 100%; 
-  height: 90%; 
+  width: 100%;
+  height: 90%;
   border-top: 200px solid transparent;
   border-bottom: 200px solid transparent;
   border-left: 250px solid black;
   margin-left: 25%;
 }
-.centerTextRight{
+.centerTextRight {
   text-align: center;
   top: -390%;
   left: -130%;
   position: relative;
   color: white;
-  
 }
-.cvMargins{
+.cvMargins {
   margin-top: 15%;
   margin-bottom: 10%;
 }
 
-.flagCv{
+.flagCv {
   -webkit-clip-path: polygon(56% 47%, 0 0, 0 97%);
   clip-path: polygon(56% 47%, 0 0, 0 97%);
   opacity: 0.3;
@@ -254,43 +250,47 @@ article#skillsInfo ul li:first-of-type {
   z-index: -1;
 }
 
-.textInFlag{
+.textInFlag {
   margin-top: 50%;
   margin-left: 10%;
-  
 }
-.textLink{
+.textLink {
   color: #fff;
   font-weight: bold;
   z-index: 1;
 }
-.colEnglish:hover{
+.colEnglish:hover {
   background-image: url(uk.jpg);
   background-position: center;
-  
 }
-.colFrench:hover{
+.colFrench:hover {
   background-image: url(fr.png);
   background-position: center;
 }
-.colSpanish:hover{
+.colSpanish:hover {
   background-image: url(spain.png);
   background-position: center;
-
 }
-.imgDetective{
+.imgDetective {
   opacity: 1;
-  width:35%;
+  width: 35%;
   margin-top: -25%;
   margin-left: 5%;
-  clip-path:inset(30% 30% 45% 50%);
-  
+  clip-path: inset(30% 30% 45% 50%);
 }
-.linkedin:hover{
+.linkedin:hover {
   background-color: black;
 }
 
+/*** Contact ***/
+#imgContact {
+  clip-path: inset(40% 30% 45% 35%);
+  margin-top: -30%;
+}
+.contactInfo {
+  margin-top: -30%;
+}
 
-  
-
-
+.t {
+  margin-top: 25%;
+}
