cv update and translation works in cv and contact section

--- a/styles.css
+++ b/styles.css
@@ -291,6 +291,6 @@ article#skillsInfo ul li:first-of-type {
   margin-top: -30%;
 }
 
-.t {
-  margin-top: 25%;
+.divContact {
+  margin-top: 20%;
 }
