--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@ html {
   height: 100%;
 }
 body {
-  width: 100%;
+  /* width: 100%;
   height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow: hidden; */
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
@@ -280,14 +280,16 @@ article#skillsInfo ul li:first-of-type {
 }
 
 /*** Contact ***/
-#imgContact {
+
+/* #imgContact {
   clip-path: inset(40% 30% 45% 35%);
   margin-top: -30%;
-}
-.contactInfo {
-  margin-top: -30%;
-}
+} */
 
-.divContact {
+/* .contactInfo {
+  margin-top: -30%;
+} */
+
+/* .divContact {
   margin-top: 20%;
-}
+} */
